# pyfil-library

./: README.md  pyproject.toml
pyfil/: __init__.py
tests/: 5_brilho.tiff  test.py
